// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketRequest component should be null if not development 1`] = `null`;

exports[`TicketRequest component should display empty dropdown 1`] = `
<div
  className="d-inline-flex align-items-center flex-wrap hidden-sm-down"
>
  <ButtonDropdown
    id="ticket-request"
    isOpen={false}
    toggle={[Function]}
  >
    <DropdownToggle
      aria-haspopup={true}
      caret={true}
      className=""
      color="info"
      data-toggle="dropdown"
      disabled={false}
      size="sm"
    >
      <i
        aria-hidden="true"
        className="fa fa-magic"
      />
       
    </DropdownToggle>
    <DropdownMenu
      tag="div"
    >
      <DropdownItem
        header={true}
        tag="button"
        toggle={true}
      >
        Ticket request (beta)
      </DropdownItem>
      <DropdownItem
        divider={true}
        tag="button"
        toggle={true}
      />
      <DropdownItem
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        Clear request
      </DropdownItem>
    </DropdownMenu>
  </ButtonDropdown>
   
</div>
`;

exports[`TicketRequest component should display requests 1`] = `
<div
  className="d-inline-flex align-items-center flex-wrap hidden-sm-down"
>
  <ButtonDropdown
    id="ticket-request"
    isOpen={false}
    toggle={[Function]}
  >
    <DropdownToggle
      aria-haspopup={true}
      caret={true}
      className=""
      color="info"
      data-toggle="dropdown"
      disabled={false}
      size="sm"
    >
      <i
        aria-hidden="true"
        className="fa fa-magic"
      />
       
      some name
    </DropdownToggle>
    <DropdownMenu
      tag="div"
    >
      <DropdownItem
        header={true}
        tag="button"
        toggle={true}
      >
        Ticket request (beta)
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        some name
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        other name
      </DropdownItem>
      <DropdownItem
        divider={true}
        tag="button"
        toggle={true}
      />
      <DropdownItem
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        Clear request
      </DropdownItem>
    </DropdownMenu>
  </ButtonDropdown>
   
</div>
`;
